Add server mode

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>phenax's desmos things</title>
     <link href="/reset.css" rel="stylesheet">
     <link href="/style.css" rel="stylesheet">
+    <script type="{{server_script}}">
+      window.isManageMode = true;
+      console.log('Manager mode enabled');
+    </script>
   </head>
   <body>
     <div id="root"></div>
