--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>phenax's desmos things</title>
+    <title>EdibleMonad's graphs</title>
     <link href="/reset.css" rel="stylesheet">
     <link href="/style.css" rel="stylesheet">
     <script type="{{server_script}}">
