Add description + remove 404

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <body>
     <div id="root"></div>
     <script src="https://www.desmos.com/api/v1.9/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
-    <script src="/src/graphs.js" type="module"></script>
+    <script src="/src/index.js" type="module"></script>
   </body>
 </html>
