Add dynamic titles + favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Akshay's graphs</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <title>Akshay's Desmos Graphs</title>
     <link href="/reset.css" rel="stylesheet">
     <link href="/style.css" rel="stylesheet">
     <script type="{{server_script}}">
