--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>Akshay's Desmos Graphs</title>
+    <meta name="description" content="A collection of creative coding demos built using desmos graphing calculator">
+
     <link href="/reset.css" rel="stylesheet">
     <link href="/style.css" rel="stylesheet">
     <script type="{{server_script}}">
